# chain_of_guidance

./: .gitmodules  README.md  __init__.py  pyproject.toml  requirements.txt
data/: consistency_finetune-data-v1.jsonl  result_gpt-4_entropy_paraphrasing_llm,0.5 - test.csv  result_gpt-4_entropy_paraphrasing_llm,0.5 - train.csv
finetune/: __init__.py  finetune.py
finetune/examples/llama-2/: fft_optimized.yml
generators/: base.py  cog.py
metrics/: __init__.py  agreement.py  base.py  nli.py  pp.py  scorer.py
notebooks/: base_vs_finetuned_model.ipynb  collect_finetune_data.ipynb  finetune_axolotl-train.ipynb  score_consistency.ipynb
perturbations/: paraphrase.py
