[tool.poetry]
name = "chain_of_guidance"
version = "0.0.1"
description = ""
authors = ["shubhobm <zoom.subha@gmail.com>", "harshraj172 <harsh777111raj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
evaluate = "^0.4.1"
deepeval = "^0.20.81"
python-dotenv = "1.0.1"
langchain = "0.3.15"
langchain_community = "0.3.15"
transformers = "4.48.1"
datasets = "3.2.0"
scipy = "1.15.1"
spacy = "3.8.4"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
